<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buma Application</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="Separator">---</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="title_activity_image_pick">ImagePickActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="title_activity_buma">BumaActivity</string>
    <string name="welcome">Welcome , </string>
    <string name="user"> Bambang </string>
    <string name="title_activity_green_card">Green Card</string>
    <string name="tempat_bahaya">Tempat:</string>
    <string name="jenis_bahaya">Jenis Bahaya : </string>
    <string name="rincian_bahaya">Deskripsi Bahaya : </string>
    <string name="rincian_tindakan">Rencana Tindakan :</string>
    <string name="kode_bahaya">Kode Bahaya :</string>

    <string-array name="domains_array">
        <item>BUKITMAKMUR</item>
        <item>ADR</item>
        <item>ADR34</item>
        <item>ADR70</item>
        <item>BIN</item>
        <item>BMX</item>
        <item>DWA</item>
        <item>GBP</item>
        <item>KDC</item>
        <item>LAN</item>
        <item>LATI</item>
        <item>PIK</item>
        <item>SNK</item>
    </string-array>

    <string-array name="jenis_bahaya_array">
        <item>Kondisi Tidak Aman (KTA)</item>
        <item>Tindakan Tidak Aman (TTA)</item>
    </string-array>

    <string-array name="tempat_bahaya_array">
        <item>HL. Lt 3</item>
        <item>HL. Lt 5</item>
        <item>HL. Lt 8</item>
        <item>HL. Lt 10</item>
        <item>HL. Lt 12</item>
        <item>Harmoni</item>
    </string-array>

    <string name="title_activity_login">Login User</string>
    <string name="title_activity_main_menu">Menu Utama</string>
    <string name="title_activity_list_green_card">List GreenCard</string>
    <string name="title_activity_tab_green_card">GreenCard</string>
    <string name="title_activity_green_card_detail">Detail GreenCard</string>
    <string name="title_activity_activity_tab_golden_rules">Activity_tab_golden_rules</string>
    <string name="title_activity_golden_rules">GoldenRules</string>
    <string name="title_activity_home_golden_rules">BUMA Golden Rules</string>
    <string name="title_activity_golden_rules_list_pattern">GoldenRulesListPattern</string>
    <string name="title_activity_golden_rules_meet_view">GoldenRulesMeetView</string>
    <string name="title_activity_golden_rules_meet_view_detail">GoldenRulesMeetViewDetail</string>
    <string name="title_activity_golden_rules_meet_view_sub_detail">GoldenRulesMeetViewSubDetail</string>
    <string name="title_activity_golden_rules_main">GoldenRulesMainActivity</string>
    <string name="title_activity_golden_rules_weekly">GoldenRulesWeekly</string>
    <string name="title_activity_golden_rules_monthly">GoldenRulesMonthly</string>
    <string name="action_home">Home</string>
    <string name="action_overflow">Menu</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_send">Send</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_golden_rules_meet_view_fill_data">GoldenRulesMeetViewFillData</string>

</resources>
