<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always">
        <menu>

            <!-- Edit -->
            <item
                android:id="@+id/action_edit"
                android:icon="@drawable/ic_action_edit"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_edit" />

            <!-- Delete -->
            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_action_delete"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_delete" />

            <!-- Send -->
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_action_send"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_send" />

            <!-- Logout -->
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_action_user"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>